summary fixed scrollbar

--- a/styles/respSummary.css
+++ b/styles/respSummary.css
@@ -1,3 +1,10 @@
+@media (max-width: 1439px) {
+  .headSummaryPosition {
+    width: auto;
+  }
+
+}
+
 @media (max-width: 1248px) {
 
   .summary_greeting {
